--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,13 @@ check_external_links = false
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
+# Whether to build a search index out of the pages and section
+# content for the `default_language`
+# https://www.getzola.org/documentation/content/search/
+# This is used for tinysearch
+# build_search_index = true
+# default_language = "en"
+
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
