--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,19 @@
+language: rust
+cache: cargo
+rust:
+  - stable
 before_script:
-  - curl -s -L https://github.com/getzola/zola/releases/download/v0.5.0/zola-v0.5.0-x86_64-unknown-linux-gnu.tar.gz | sudo tar xvzf - -C /usr/local/bin
+  - curl -s -L https://github.com/getzola/zola/releases/download/v0.6.0/zola-v0.6.0-x86_64-unknown-linux-gnu.tar.gz | sudo tar xvzf - -C /usr/local/bin
+  - cargo install --force wasm-pack 
+  - wasm-pack --version
+  - cargo install --force tinysearch
+  - tinysearch --version
 script:
-  - zola build
+  - make build
 after_success: |
   [ $TRAVIS_BRANCH = source ] &&
   [ $TRAVIS_PULL_REQUEST = false ] &&
-  zola build &&
+  make build &&
   sudo pip install ghp-import &&
   ghp-import --no-jekyll \
             --cname=matthias-endler.de \
