--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,15 @@ language: rust
 cache: cargo
 rust:
   - stable
+addons:
+  apt:
+    sources:
+      - debian-sid
+    packages:
+      - binaryen
 before_script:
+  - curl -sL https://deb.nodesource.com/setup_12.x | bash -
+  - apt-get install -y nodejs
   - curl -s -L https://github.com/getzola/zola/releases/download/v0.6.0/zola-v0.6.0-x86_64-unknown-linux-gnu.tar.gz | sudo tar xvzf - -C /usr/local/bin
   - cargo install --force wasm-pack 
   - wasm-pack --version
