add --allow-unauthenticated for binaryen on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,8 @@ addons:
   apt:
     sources:
       - debian-sid
-    packages:
-      - binaryen
 before_script:
+  - apt-get install -y --allow-unauthenticated binaryen
   - curl -sL https://deb.nodesource.com/setup_12.x | bash -
   - apt-get install -y nodejs
   - curl -s -L https://github.com/getzola/zola/releases/download/v0.6.0/zola-v0.6.0-x86_64-unknown-linux-gnu.tar.gz | sudo tar xvzf - -C /usr/local/bin
