--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,11 @@ addons:
   apt:
     sources:
       - debian-sid
+    packages:
+      - --allow-unauthenticated binaryen
 before_script:
-  - sudo apt-get install -y --allow-unauthenticated binaryen
   - curl -sL https://deb.nodesource.com/setup_12.x | bash -
-  - sudo apt-get install -y nodejs
+  - apt-get install -y nodejs
   - curl -s -L https://github.com/getzola/zola/releases/download/v0.6.0/zola-v0.6.0-x86_64-unknown-linux-gnu.tar.gz | sudo tar xvzf - -C /usr/local/bin
   - cargo install --force wasm-pack 
   - wasm-pack --version
