Update talks intro

--- a/content/static/talks/data.toml
+++ b/content/static/talks/data.toml
@@ -1,6 +1,7 @@
 intro = """
 Good talks are fun and educational.
 Here's a list of previous events where I spoke.
+I try to make every talk and every workshop as unique as possible.
 If you would like me to speak at your event, let's [get connected](mailto:matthias@endler.dev)!
 """
 
