--- a/content/static/talks/data.toml
+++ b/content/static/talks/data.toml
@@ -9,7 +9,8 @@ If you would like me to speak at your event, let's [get connected](mailto:matthi
 title = "Rust Embedded"
 image = "2019-rustfest.webp"
 event = "RustFest"
-date = "November 2019"
+month = "November"
+year = "2019"
 location = "Barcelona, Spain"
 type = "Workshop"
 collaboration = "[Hanno Braun](https://braun-embedded.com/workshop/)"
@@ -30,7 +31,8 @@ free of charge and for them to keep.
 title = "Wonderful WebAssembly"
 image = "2019-bristech.webp"
 event = "Bristech"
-date = "November 2019"
+month = "November"
+year  = "2019"
 location = "Bristol, England"
 slides = "https://speakerdeck.com/mre/wonderful-webassembly"
 recording = "https://www.youtube.com/watch?v=sEcbTYLtLSM"
@@ -47,7 +49,8 @@ and see what we can do to make it better.
 title = "Everything is Broken (And That's Okay!)"
 image = "2019-localhost.webp"
 event = "localhost conference"
-date = "October 2019"
+month = "October"
+year = "2019"
 location = "Düsseldorf, Germany"
 slides = "https://speakerdeck.com/mre/everything-is-broken-and-thats-okay"
 recording = "https://www.youtube.com/watch?v=sEcbTYLtLSM"
@@ -68,7 +71,8 @@ Let's change the way we write software forever!
 title = "How Does Async Work?"
 image = "2019-async.webp"
 event = "Web Meetup Cologne"
-date = "September 2019"
+month = "September"
+year = "2019"
 location = "Cologne, Germany"
 slides = "https://speakerdeck.com/mre/how-does-async-work"
 description = """
@@ -83,7 +87,8 @@ We will look at Node's, Python's, and Rust's async features and how they work un
 title = "What is Rust Doing Behind the Curtains?"
 image = "2019-fosdem.webp"
 event = "FOSDEM"
-date = "February 2019"
+month = "February"
+year = "2019"
 location = "Brussels, Belgium"
 recording = "https://www.youtube.com/watch?v=ePiWBGh35q0"
 slides = "https://speakerdeck.com/mre/what-is-rust-doing-behind-the-curtains"
@@ -105,7 +110,8 @@ mortals.
 title = "Write Your Own Shell in Rust"
 image = "2018-shell-workshop.webp"
 event = "RustBeltRust"
-date = "October 2019"
+month = "October"
+year = "2019"
 location = "Ann Arbor, MI, US"
 type = "Workshop"
 collaboration = "[Santiago Pastorino](https://github.com/spastorino)"
@@ -126,7 +132,8 @@ mid-size Rust project!
 title = "Hyperjson — The Journey Towards Faster Safer JSON Parsing in Python Using Rust"
 image = "2018-hyperjson.webp"
 event = "Rust Cologne"
-date = "August 2018"
+month = "August"
+year = "2018"
 location = "Chaos Computer Club, Cologne, Germany"
 recording = "https://www.youtube.com/watch?v=f1ln5j3aoSI"
 slides = "https://speakerdeck.com/mre/hyperjson-the-journey-towards-faster-safer-json-parsing-in-python-using-rust"
@@ -144,7 +151,8 @@ highly-optimized tasks like parsing file formats in the future.
 title = "Idiomatic Rust — Writing Concise and Elegant Rust Code"
 image = "2018-fosdem.webp"
 event = "FOSDEM"
-date = "February 2018"
+month = "February"
+year = "2018"
 location = "Brussels, Belgium"
 recording = "https://www.youtube.com/watch?v=P2mooqNMxMs"
 slides = "https://speakerdeck.com/mre/idiomatic-rust-writing-concise-and-elegant-rust-code"
@@ -160,7 +168,8 @@ Rust code.
 title = "Live Coding Like No One's Watching!"
 image = "2017-rustbeltrust.webp"
 event = "RustBeltRust"
-date = "October 2017"
+month = "October"
+year = "2017"
 location = "Columbus, OH, USA"
 type = "Workshop"
 description = """
@@ -176,7 +185,8 @@ documentation for clues. I might explain a little Rust along the way.
 title = "My Good Friend Rust - An Introduction"
 image = "2017-topconf.webp"
 event = "Topconf"
-date = "October 2017"
+month = "October"
+year = "2017"
 location = "Düsseldorf, Germany"
 slides = "https://speakerdeck.com/mre/my-good-friend-rust-topconf-2017"
 description = """
@@ -192,7 +202,8 @@ though you might be a Web-Developer.
 title = "What's So Hard About Writing a Slack Client in Rust?"
 image = "2015-slack-client.webp"
 event = "Rust Cologne"
-date = "March 2017"
+month = "March"
+year = "2017"
 location = "Chaos Computer Club, Cologne, Germany"
 code = "https://github.com/mre/slack"
 recording = "https://www.youtube.com/watch?v=rrtJh1kz1Ms"
@@ -210,7 +221,8 @@ avoid and laughs to share.
 title = "Why Rust?"
 image = "2015-why-rust.webp"
 event = "Codemotion"
-date = "May 2016"
+month = "May"
+year = "2016"
 location = "Amsterdam, Netherlands"
 recording = "https://www.youtube.com/watch?v=imtejBNbm0o"
 slides = "https://speakerdeck.com/mre/why-rust"
@@ -227,7 +239,8 @@ about Rust and show some of its nicest features.
 title = "Rust Tooling"
 image = "2015-tooling.webp"
 event = "Rust Cologne"
-date = "October 2015"
+month = "October"
+year = "2015"
 location = "Chaos Computer Club, Cologne, Germany"
 slides = "https://speakerdeck.com/mre/rust-tooling-october-2015"
 description = """
@@ -239,7 +252,8 @@ overview of ways to help you write better Rust code.
 title = "The State of PyPy"
 image = "2015-pypy.webp"
 event = "Python Usergroup"
-date = "April 2015"
+month = "April"
+year = "2015"
 location = "Düsseldorf, Germany"
 recording = "https://www.youtube.com/watch?v=YEzuUJGcPqc"
 slides = "https://speakerdeck.com/mre/the-state-of-pypy-april-2015"
