--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         PAGES_BRANCH: master
         BUILD_DIR: .
         TOKEN: ${{ secrets.TOKEN }}
-    - name: Audit blog using Lighthouse
+    - name: Audit blog using Lighthouse v5
       uses: treosh/lighthouse-ci-action@v2
       with:
         urls: |
@@ -25,3 +25,7 @@ jobs:
           https://endler.dev/2019/maybe-you-dont-need-kubernetes/
         uploadArtifacts: false
         temporaryPublicStorage: true
+    - name: Audit blog using Lighthouse v6
+      run: |
+        npm install -g @lhci/cli@0.4.x
+        lhci autorun
