--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,10 @@ jobs:
           https://endler.dev/2019/maybe-you-dont-need-kubernetes/
         uploadArtifacts: false
         temporaryPublicStorage: true
+    - name: Use Node.js 10.x
+      uses: actions/setup-node@v1
+      with:
+        node-version: 10.x
     - name: Audit blog using Lighthouse v6
       run: |
         npm install -g @lhci/cli@0.4.x
