--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ description = "Backend Engineer at trivago. Likes just-in-time compilers and hot
 generate_feed = true
 feed_filename = "rss.xml"
 
-# Go through every links in all content and check if the links are valid
+# Check if the links are valid
 check_external_links = false
 
 # Whether to automatically compile all Sass files in the sass directory
@@ -20,11 +20,9 @@ compile_sass = true
 # default_language = "en"
 
 # Whether to do syntax highlighting
-# Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
+# Theme can be customized by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
 highlight_theme = "ayu-light"
 
 [extra]
 author = "Matthias Endler"
-# Enable Google analytics (comment to disable)
-# id = "UA-693428-1" 
