--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: ⏬ Install zola
-        run: curl -sL https://github.com/getzola/zola/releases/download/v0.12.0/zola-v0.12.0-x86_64-unknown-linux-gnu.tar.gz | tar zxv
+        run: sudo snap install --edge zola
 
       - name: ⏬ Install wrangler
         run: sudo npm i @cloudflare/wrangler -g
