--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,21 @@ jobs:
           command: install
           args: --git https://github.com/mre-early-access/gh-stats --branch main
 
+      - name: ⏬ Install tinysearch and friends
+        uses: actions-rs/cargo@v1
+        with:
+          command: install
+          args: wasm-pack tinysearch
+
+      - name: ⏬ Install binaryen
+        run: |
+          set -e
+          curl -L https://github.com/WebAssembly/binaryen/releases/download/1.39.1/binaryen-1.39.1-x86_64-linux.tar.gz | tar xzf -
+          echo "##[add-path]`pwd`/binaryen-1.39.1"
+      
+      - name: ⏬ Install terser
+        run: npm install terser
+      
       - name: 📖 Build
         run: make build
 
