--- a/config.toml
+++ b/config.toml
@@ -19,6 +19,10 @@ compile_sass = true
 # build_search_index = true
 # default_language = "en"
 
+taxonomies = [
+    { name = "tags", feed = true, paginate_by = 10},
+]
+
 # Whether to do syntax highlighting
 # Theme can be customized by setting the `highlight_theme` variable to a theme
 # supported by Zola
