--- a/helpers/img/Cargo.toml
+++ b/helpers/img/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 glob = "0.3.0"
-anyhow = "1.0.40"
+anyhow = "1.0.41"
 duct = "0.13.5"
-rayon = "1.5.0"
+rayon = "1.5.1"
+which = "4.1.0"
