--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,11 +26,17 @@ jobs:
           command: install
           args: --git https://github.com/mre-early-access/gh-stats --branch main
 
-      - name: ⏬ Install tinysearch and friends
+      - name: ⏬ Install wasm-pack
         uses: actions-rs/cargo@v1
         with:
           command: install
-          args: wasm-pack tinysearch
+          args: wasm-pack
+
+      - name: ⏬ Install tinysearch
+        uses: actions-rs/cargo@v1
+        with:
+          command: install
+          args: --git https://github.com/tinysearch/tinysearch.git --branch debug
 
       - name: ⏬ Install binaryen
         run: |
