--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,17 +26,11 @@ jobs:
           command: install
           args: --git https://github.com/mre-early-access/gh-stats --branch main
 
-      - name: ⏬ Install wasm-pack
+      - name: ⏬ Install wasm-pack and tinysearch
         uses: actions-rs/cargo@v1
         with:
           command: install
-          args: wasm-pack
-
-      - name: ⏬ Install tinysearch
-        uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: --git https://github.com/tinysearch/tinysearch.git --branch debug
+          args: wasm-pack tinysearch
 
       - name: ⏬ Install binaryen
         run: |
