--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: install
-          args: --git https://github.com/mre-early-access/gh-stats --branch main
+          args: --git https://github.com/mre/gh-stats --branch main
 
       - name: ⏬ Install wasm-pack
         uses: actions-rs/cargo@v1
@@ -41,8 +41,8 @@ jobs:
       - name: ⏬ Install binaryen
         run: |
           set -e
-          curl -L https://github.com/WebAssembly/binaryen/releases/download/1.39.1/binaryen-1.39.1-x86_64-linux.tar.gz | tar xzf -
-          echo "`pwd`/binaryen-1.39.1" >> $GITHUB_PATH
+          curl -L https://github.com/WebAssembly/binaryen/releases/download/version_104/binaryen-version_104-x86_64-linux.tar.gz | tar xzf -
+          echo "`pwd`/binaryen-version_104" >> $GITHUB_PATH
 
       - name: ⏬ Install terser
         run: sudo npm install -g terser
