speed up build process

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,11 +26,14 @@ jobs:
           command: install
           args: --git https://github.com/mre/gh-stats --branch main
 
+      - name: ⏬ Install gh-stats
+        run: |
+          set -e
+          curl -L https://github.com/mre/gh-stats/releases/download/v0.1.0/gh-stats-v0.1.0-x86_64-unknown-linux-gnu.tar.gz | tar xzf -
+          echo "`pwd`/gh-stats" >> $GITHUB_PATH
+
       - name: ⏬ Install wasm-pack
-        uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: wasm-pack
+        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
 
       - name: ⏬ Install tinysearch
         uses: actions-rs/cargo@v1
