--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,9 @@ jobs:
         run: |
           set -e
           mkdir bin
-          curl -L https://github.com/mre/gh-stats/releases/download/v0.1.0/gh-stats-v0.1.0-x86_64-unknown-linux-gnu.tar.gz | tar xzf --directory=bin
+          curl -sSL https://github.com/mre/gh-stats/releases/download/v0.1.0/gh-stats-v0.1.0-x86_64-unknown-linux-gnu.tar.gz | tar xz --directory=bin
           chmod +x bin/gh-stats
-          echo "`pwd`/bin" >> $GITHUB_PATH
+          echo "$(pwd)/bin" >> ${GITHUB_PATH}
 
       - name: ⏬ Install wasm-pack
         run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
@@ -41,7 +41,7 @@ jobs:
         run: |
           set -e
           curl -L https://github.com/WebAssembly/binaryen/releases/download/version_104/binaryen-version_104-x86_64-linux.tar.gz | tar xzf -
-          echo "`pwd`/binaryen-version_104/bin" >> $GITHUB_PATH
+          echo "$(pwd)/binaryen-version_104/bin" >> ${GITHUB_PATH}
 
       - name: ⏬ Install terser
         run: sudo npm install -g terser
